ajout des boutons Enseignant et Parent dans le MainActivity et de leur textes dans strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Suivi-Eleve</string>
+    <string name="buttonEnseignant">Enseignant</string>
+    <string name="buttonParent">Parent</string>
 </resources>
