--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,12 @@
     <string name="buttonEnseignant">Enseignant</string>
     <string name="buttonParent">Parent</string>
     <string name="title_activity_parent_acceuil">ParentAcceuilActivity</string>
-    <string name="title_activites">Activités à Faire</string>
+    <string name="title_activites">Activités</string>
     <string name="title_observations">Observations</string>
     <string name="title_evenements">Evenements</string>
+    <string name="title_chat">Chat Message</string>
+    <string name="title_photos">Photo Evenements</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
