--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="title_evenements">Evenements</string>
     <string name="title_chat">Chat </string>
     <string name="title_photos">Photos</string>
+    <string name="titleActiviteAFaire">Activité à Faire</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
