Add New Event finished

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,13 +28,10 @@
     <string name="title_date_ajout_activite">Donner la date limite</string>
     <string name="description_addImageButton">boutton pour ajouter une image</string>
     <string name="Description_imageadded">Affichage image choisie</string>
-<<<<<<< HEAD
     <string name="Libellé_content">Libellé content</string>
     <string name="Desc_Image_activity">Image activity</string>
     <string name="Type_content">Type content</string>
     <string name="Date_content">Date content</string>
-=======
-
 
 
     <string name="title_creer_un_evenement">Créer un evenement</string>
@@ -49,7 +46,7 @@
 
     <string name="title_faire_lappel">RAPPEL</string>
     <string name="Eleve">eleve</string>
-    <string name="eleve">eleve</string>
+    <string name="eleve">Eleve</string>
     <string name="Type">Type</string>
     <string name="type">type</string>
     <string name="note">Note</string>
@@ -57,6 +54,8 @@
     <string name="envoyer">envoyer</string>
     <string name="Tableau_de_bord">Tableau de bord</string>
     <string name="Ajouter">Ajouter</string>
+    <string name="Obeservation_buttionenvoyer">Envoyer</string>
+    <string name="title_Rappel">Faire l\'appel</string>
+    <string name="title_Activites">Activités</string>
 
->>>>>>> 8348b0ea44cfb09876f16351e65d4a97174667ae
 </resources>
